# hello-cicd

./: .gitignore  .travis.tml  Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust.yml
c/: Makefile  cc.c  cc.h
db/: 20230315_19_1.parquet
src/: db.rs  lib.rs  main.rs  s3.rs
